test/validator/simple_map.orderly
object {
      string {0,10} name;
};
