test/negative_cases/missing_prop_name.orderly
object {
  object {
    string first;
    string last;
  } name;
  integer [0,200];
} person;
